--- a/style.css
+++ b/style.css
@@ -35,3 +35,15 @@ html {
     width:700px;
     height:1800px;
 }
+
+@media screen and (max-width:959px){
+    
+    .content{
+        width:100%;
+    }
+    .content2{
+        width:70%;
+    }
+    
+    
+}
